--- a/web/internal/views/partials/nav.html
+++ b/web/internal/views/partials/nav.html
@@ -1,5 +1,5 @@
 {{ define "partials/nav" }}
-    <header hx-boost="true" class="fixed bottom-0 z-10 flex w-full justify-between bg-sky-700 px-4 py-1 text-white sm:sticky sm:top-0 sm:px-8 sm:py-3">
+    <header hx-boost="true" hx-indicator="#global-indicator" class="fixed bottom-0 z-10 flex w-full justify-between bg-sky-700 px-4 py-1 text-white sm:sticky sm:top-0 sm:px-8 sm:py-3">
         <h1 class="hidden text-xl sm:block">
             <a href="/">
                 NFF - Nota Fiscal Fácil
@@ -8,7 +8,7 @@
         <ul class="flex w-full justify-evenly sm:w-fit">
             <a href="/" class="sm:hidden">
                 <li class="flex flex-col items-center gap-1 rounded px-4 pt-1 hover:bg-sky-800 active:scale-90">
-                    <svg  fill="#ffffff" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/></svg>
+                    <svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/></svg>
                     <span class="text-xs">Início</span>
                 </li>
             </a>
