--- a/web/internal/views/layouts/base.html
+++ b/web/internal/views/layouts/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link href="/static/styles/tailwind.css" rel="stylesheet" />
+    <link href="/static/styles/custom.css" rel="stylesheet" />
 
     <link rel="icon" href="/static/icons/icon.ico" type="image/x-icon">
 
@@ -26,7 +27,7 @@
 
     {{ template "partials/general-error" .GeneralError }}
 
-    <div id="global-indicator" class="htmx-indicator absolute top-0 flex h-screen w-screen items-center justify-center bg-black bg-opacity-10">
+    <div id="global-indicator" class="hx-indicator absolute top-0 flex h-screen w-screen items-center justify-center bg-black bg-opacity-10">
         <i class="fa-solid fa-spinner fa-spin text-5xl opacity-70"></i>
     </div>
 </body>
