--- a/web/internal/views/partials/entity-form.html
+++ b/web/internal/views/partials/entity-form.html
@@ -89,32 +89,20 @@
             </div>
         </div>
         <div class="flex gap-6">
-            <button hx-post="/entities" hx-target="#entity-list" hx-swap="beforeend"
-                class="mt-4 flex flex-1 flex-col items-center justify-center gap-2 rounded bg-green-400 px-2 py-1 hover:bg-green-500 sm:flex-row sm:items-start sm:gap-3 sm:px-4 sm:py-3" type="submit">
-                <svg class="translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
-                    viewBox="0 0 640 512">
-                    <path
-                        d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM504 312V248H440c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V136c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H552v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z" />
-                </svg>
+            <button hx-post="/entities" hx-target="#entity-list" hx-swap="beforeend" class="icon-btn mt-4 flex flex-1 flex-col items-center justify-center gap-2 rounded bg-green-400 px-2 py-1 hover:bg-green-500 sm:flex-row sm:items-start sm:gap-3 sm:px-4 sm:py-3" type="submit">
+                <svg class="hx-indicator relative top-1 animate-spin" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"/></svg>
+                <svg class="original-icon translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 640 512"> <path d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM504 312V248H440c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V136c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H552v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z" /> </svg>
                 <span class="text-xs sm:text-base">Registrar</span>
             </button>
             {{ if ne .Entity.Id 0 }}
-            <button hx-put="/entities/{{ .Entity.Id }}" hx-target="#entity-{{ .Entity.Id }}" hx-swap="outerHTML"
-                class="mt-4 flex flex-1 flex-col items-center justify-center gap-2 rounded bg-sky-300 px-2 py-1 hover:bg-sky-400 sm:flex-row sm:items-start sm:gap-3 sm:px-4 sm:py-3" type="submit">
-                <svg class="translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
-                    viewBox="0 0 512 512">
-                    <path
-                        d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z" />
-                </svg>
+            <button hx-put="/entities/{{ .Entity.Id }}" hx-target="#entity-{{ .Entity.Id }}" hx-swap="outerHTML" class="icon-btn mt-4 flex flex-1 flex-col items-center justify-center gap-2 rounded bg-sky-300 px-2 py-1 hover:bg-sky-400 sm:flex-row sm:items-start sm:gap-3 sm:px-4 sm:py-3" type="submit">
+                <svg class="hx-indicator relative top-1 animate-spin" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"/></svg>
+                <svg class="original-icon translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"> <path d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z" /> </svg>
                 <span class="text-xs sm:text-base">Atualizar</span>
             </button>
-            <button hx-delete="/entities/{{ .Entity.Id }}" hx-target="#entity-form" hx-swap="outerHTML"
-                class="mt-4 flex flex-1 flex-col items-center justify-center gap-2 rounded bg-red-400 px-2 py-1 hover:bg-red-500 sm:flex-row sm:items-start sm:gap-3 sm:px-4 sm:py-3">
-                <svg class="translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
-                    viewBox="0 0 448 512">
-                    <path
-                        d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
-                </svg>
+            <button hx-delete="/entities/{{ .Entity.Id }}" hx-target="#entity-form" hx-swap="outerHTML" class="icon-btn mt-4 flex flex-1 flex-col items-center justify-center gap-2 rounded bg-red-400 px-2 py-1 hover:bg-red-500 sm:flex-row sm:items-start sm:gap-3 sm:px-4 sm:py-3">
+                <svg class="hx-indicator relative top-1 animate-spin" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"/></svg>
+                <svg class="original-icon translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"> <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" /> </svg>
                 <span class="text-xs sm:text-base">Deletar</span>
             </button>
             {{ end }}
