--- a/web/internal/views/partials/request-card.html
+++ b/web/internal/views/partials/request-card.html
@@ -6,6 +6,20 @@
     {{ $details_endpoint := "" }}
     {{ $get_form_endpoint := "" }}
     {{ $target_form := "" }}
+    {{ $get_status_interval := "10s" }}
+
+    {{ $should_check_status := eq .ReqStatus "pending" }}
+    {{ $req_msg_color := "" }}
+
+    {{ if eq .ReqStatus "success" }}
+        {{ $req_msg_color = "text-green-600"}}
+    {{ else if eq .ReqStatus "warning" }}
+        {{ $req_msg_color = "text-yellow-600"}}
+    {{ else if eq .ReqStatus "error" }}
+        {{ $req_msg_color = "text-red-600"}}
+    {{ else if eq .ReqStatus "pending" }}
+        {{ $req_msg_color = "text-sky-600"}}
+    {{ end }}
 
     {{ if eq .OverviewType "invoice" }}
         {{ $from = .Sender.Name }}
@@ -16,6 +30,7 @@
         {{ $details_endpoint = "invoices" }}
         {{ $get_form_endpoint = "invoices" }}
         {{ $target_form = "#invoice-form" }}
+        {{ $get_status_interval = "10s" }}
     {{ else if eq .OverviewType "canceling" }}
         {{ $from = .Entity.Name }}
         {{ $to = .Number }}
@@ -25,16 +40,15 @@
         {{ $details_endpoint = "invoices/cancel" }}
         {{ $get_form_endpoint = "invoices/cancel" }}
         {{ $target_form = "#invoice-cancel-form" }}
+        {{ $get_status_interval = "8s" }}
     {{ end }}
 
 <li
+    id="request-card-{{ .Id }}"
     class="flex flex-wrap items-center justify-between gap-6 rounded px-4 py-4 shadow shadow-gray-300 transition-all hover:shadow-gray-500 sm:flex-nowrap sm:py-2">
     <div class="flex gap-3">
-        <div>
-            <!-- <i class="fa-solid fa-spinner fa-spin"></i> -->
-            <i class="fa-solid fa-circle-check text-green-600"></i>
-            <!-- <i class="fa-solid fa-circle-xmark text-red-600"></i> -->
-            <!-- <i class="fa-solid fa-triangle-exclamation text-yellow-600"></i> -->
+        <div {{ if $should_check_status }} hx-get="/{{ $details_endpoint }}/{{ .Id }}/request-card-status" hx-target="this" hx-swap="innerHTML" hx-trigger="every {{ $get_status_interval }}" {{ end }}>
+            {{ template "partials/request-card-status" .ReqStatus }}
         </div>
         <span>{{ $from }}</span>
         <svg class="translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
@@ -43,9 +57,8 @@
         </svg>
         <span>{{ $to }}</span>
     </div>
-    <p class="flex-1 truncate text-green-600">
-        Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.
-        Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.
+    <p class="flex-1 truncate {{ $req_msg_color }}">
+        {{ .ReqMsg }}
     </p>
     <div class="flex flex-1 justify-end gap-3 sm:flex-none">
         <button hx-get="/{{ $details_endpoint }}/{{ .Id }}/request-card-details" hx-trigger="click" hx-target="#request-card-details" hx-swap="outerHTML" class="icon-btn flex w-full justify-center gap-3 rounded bg-yellow-300 px-4 py-2 hover:bg-yellow-400 active:bg-yellow-500 sm:w-fit">
