--- a/web/internal/views/partials/request-card-details.html
+++ b/web/internal/views/partials/request-card-details.html
@@ -7,8 +7,7 @@
         {{ $To := "" }}
         {{ $ToPrefix := "" }}
         {{ $HasItems := false }}
-        {{ $IsFinished := false }}
-        {{ $RequestStatus := "loading" }}
+        {{ $IsFinished := ne .ReqStatus "pending" }}
         {{ $FeedbackTextColor := "" }}
 
         {{ $IsInvoicePage := eq .OverviewType "invoice" }}
@@ -24,12 +23,14 @@
             {{ $ToPrefix = "NFA-" }}
         {{ end }}
 
-        {{ if eq $RequestStatus "ok" }}
+        {{ if eq .ReqStatus "success" }}
             {{ $FeedbackTextColor = "green" }}
-        {{ else if eq $RequestStatus "warning" }}
+        {{ else if eq .ReqStatus "warning" }}
             {{ $FeedbackTextColor = "yellow" }}
-        {{ else }}
+        {{ else if eq .ReqStatus "error" }}
             {{ $FeedbackTextColor = "red" }}
+        {{ else if eq .ReqStatus "pending" }}
+            {{ $FeedbackTextColor = "sky" }}
         {{ end }}
 
         <header class="sticky top-0 flex items-center justify-between bg-white pb-4 pt-6">
@@ -49,12 +50,10 @@
             </button>
         </header>
         <hr>
-        {{ if $IsFinished }}
-            <p class="py-4 text-{{ $FeedbackTextColor }}-600">
-                Lorem ipsum dolor sit amet, qui minim labore adipisicing.
-            </p>
-            <hr>
-        {{ end }}
+        <p class="py-4 text-{{ $FeedbackTextColor }}-600">
+            {{ .ReqMsg }}
+        </p>
+        <hr>
         <ul class="flex flex-col gap-4 py-4 sm:flex-row sm:flex-wrap sm:gap-x-0">
             {{ if $IsInvoicePage }}
                 <li class="sm:w-1/2 sm:pr-2">
