--- a/web/internal/views/partials/request-card.html
+++ b/web/internal/views/partials/request-card.html
@@ -55,7 +55,7 @@
         <span>{{ $to }}</span>
     </div>
     <p class="flex-1 truncate {{ $req_msg_color }}">
-        {{ .ReqMsg }}
+        {{ GetReqCardErrSummary .ReqMsg }}
     </p>
     <div class="flex flex-1 justify-end gap-3 sm:flex-none">
         <button hx-get="/{{ $details_endpoint }}/{{ .Id }}/request-card-details" hx-trigger="click" hx-target="#request-card-details" hx-swap="outerHTML" class="icon-btn flex w-full justify-center gap-3 rounded bg-yellow-300 px-4 py-2 hover:bg-yellow-400 active:bg-yellow-500 sm:w-fit">
