--- a/web/internal/views/partials/request-card-details.html
+++ b/web/internal/views/partials/request-card-details.html
@@ -3,44 +3,16 @@
 <dialog id="request-card-details" class="w-11/12 rounded px-6 pb-6 sm:w-3/4 md:w-2/3 lg:w-1/2 xl:w-1/3">
     {{ if . }}
 
-        {{ $From := "" }}
-        {{ $To := "" }}
-        {{ $ToPrefix := "" }}
-        {{ $HasItems := false }}
-        {{ $IsFinished := ne .ReqStatus "pending" }}
-        {{ $FeedbackTextColor := "" }}
-
-        {{ $IsInvoicePage := eq .OverviewType "invoice" }}
-        {{ $IsCancelingPage := eq .OverviewType "canceling" }}
-
-        {{ if $IsInvoicePage }}
-            {{ $From = .Sender.Name }}
-            {{ $To = .Recipient.Name }}
-            {{ $HasItems = true }}
-        {{ else if $IsCancelingPage }}
-            {{ $From = .Entity.Name }}
-            {{ $To = .Number }}
-            {{ $ToPrefix = "NFA-" }}
-        {{ end }}
-
-        {{ if eq .ReqStatus "success" }}
-            {{ $FeedbackTextColor = "green" }}
-        {{ else if eq .ReqStatus "warning" }}
-            {{ $FeedbackTextColor = "yellow" }}
-        {{ else if eq .ReqStatus "error" }}
-            {{ $FeedbackTextColor = "red" }}
-        {{ else if eq .ReqStatus "pending" }}
-            {{ $FeedbackTextColor = "sky" }}
-        {{ end }}
+        {{ $ReqCardData := GetReqCardData . }}
 
         <header class="sticky top-0 flex items-center justify-between bg-white pb-4 pt-6">
             <div class="flex gap-4 text-xl font-semibold">
-                <span>{{ $From }}</span>
+                <span>{{ $ReqCardData.From }}</span>
                 <svg class="translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
                     <path
                     d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
                 </svg>
-                <span>{{ $ToPrefix }}{{ $To }}</span>
+                <span>{{ $ReqCardData.ToPrefix }}{{ $ReqCardData.To }}</span>
             </div>
             <button onclick="this.closest('dialog').close()" class="rounded p-2 transition-colors hover:bg-gray-200 active:bg-gray-300">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512">
@@ -50,12 +22,12 @@
             </button>
         </header>
         <hr>
-        <pre class="py-4 text-{{ $FeedbackTextColor }}-600 whitespace-pre-wrap">
+        <pre class="py-4 text-{{ $ReqCardData.FeedbackTextColor }}-600 whitespace-pre-wrap">
             {{- .ReqMsg -}}
         </pre>
         <hr>
         <ul class="flex flex-col gap-4 py-4 sm:flex-row sm:flex-wrap sm:gap-x-0">
-            {{ if $IsInvoicePage }}
+            {{ if eq $ReqCardData.OverviewType "invoice" }}
                 <li class="sm:w-1/2 sm:pr-2">
                     <strong>Número</strong>: <span> {{ if .Number }} {{ .Number }} {{ else }} - {{ end }} </span>
                 </li>
@@ -86,7 +58,7 @@
                 <li class="sm:w-1/2 sm:pl-2">
                     <strong>Quantidade de itens</strong>: <span> {{ len .Items }} </span>
                 </li>
-            {{ else if $IsCancelingPage }}
+            {{ else if eq $ReqCardData.OverviewType "canceling" }}
                 <li class="sm:w-1/2 sm:pl-2">
                     <strong>Ano</strong>: <span> {{ .Year }} </span>
                 </li>
@@ -95,7 +67,7 @@
                 </li>
             {{ end }}
         </ul>
-        {{ if $HasItems }}
+        {{ if $ReqCardData.HasItems }}
             <hr>
             <h4 class="py-4 text-xl">Produtos</h4>
             <div class="flex flex-col gap-4">
