--- a/web/internal/views/partials/request-card.html
+++ b/web/internal/views/partials/request-card.html
@@ -1,71 +1,33 @@
 {{ define "partials/request-card" }}
 
-    {{ $from := "" }}
-    {{ $to := "" }}
-    {{ $is_downloadable := false }}
-    {{ $details_endpoint := "" }}
-    {{ $get_form_endpoint := "" }}
-    {{ $target_form := "" }}
-
-    {{ $should_check_status := eq .ReqStatus "pending" }}
-    {{ $req_msg_color := "" }}
-
-    {{ if eq .ReqStatus "success" }}
-        {{ $req_msg_color = "text-green-600"}}
-    {{ else if eq .ReqStatus "warning" }}
-        {{ $req_msg_color = "text-yellow-600"}}
-    {{ else if eq .ReqStatus "error" }}
-        {{ $req_msg_color = "text-red-600"}}
-    {{ else if eq .ReqStatus "pending" }}
-        {{ $req_msg_color = "text-sky-600"}}
-    {{ end }}
-
-    {{ if eq .OverviewType "invoice" }}
-        {{ $from = .Sender.Name }}
-        {{ $to = .Recipient.Name }}
-
-        {{ $is_downloadable = true }}
-
-        {{ $details_endpoint = "invoices" }}
-        {{ $get_form_endpoint = "invoices" }}
-        {{ $target_form = "#invoice-form" }}
-    {{ else if eq .OverviewType "canceling" }}
-        {{ $from = .Entity.Name }}
-        {{ $to = .Number }}
-
-        {{ $is_downloadable = false }}
-
-        {{ $details_endpoint = "invoices/cancel" }}
-        {{ $get_form_endpoint = "invoices/cancel" }}
-        {{ $target_form = "#invoice-cancel-form" }}
-    {{ end }}
+    {{ $ReqCardData := GetReqCardData . }}
 
 <li
     id="request-card-{{ .Id }}"
     class="flex flex-wrap items-center justify-between gap-6 rounded px-4 py-4 shadow shadow-gray-300 transition-all hover:shadow-gray-500 sm:flex-nowrap sm:py-2">
     <div class="flex gap-3">
-        <div {{ if $should_check_status }} hx-get="/{{ $details_endpoint }}/{{ .Id }}/request-card-status" hx-target="this" hx-swap="innerHTML" hx-trigger="every 5s" {{ end }}>
+        <div {{ if $ReqCardData.ShouldCheckStatus }} hx-get="/{{ $ReqCardData.ResourceName }}/{{ .Id }}/request-card-status" hx-target="this" hx-swap="innerHTML" hx-trigger="every 5s" {{ end }}>
             {{ template "partials/request-card-status" .ReqStatus }}
         </div>
-        <span>{{ $from }}</span>
+        <span>{{ $ReqCardData.From }}</span>
         <svg class="translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
             <path
                 d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
         </svg>
-        <span>{{ $to }}</span>
+        <span>{{ $ReqCardData.To }}</span>
     </div>
-    <p class="flex-1 truncate {{ $req_msg_color }}">
+    <p class="flex-1 truncate text-{{ $ReqCardData.FeedbackTextColor }}-600">
         {{ GetReqCardErrSummary .ReqMsg }}
     </p>
     <div class="flex flex-1 justify-end gap-3 sm:flex-none">
-        <button hx-get="/{{ $details_endpoint }}/{{ .Id }}/request-card-details" hx-trigger="click" hx-target="#request-card-details" hx-swap="outerHTML" class="icon-btn flex w-full justify-center gap-3 rounded bg-yellow-300 px-4 py-2 hover:bg-yellow-400 active:bg-yellow-500 sm:w-fit">
+        <button hx-get="/{{ $ReqCardData.ResourceName }}/{{ .Id }}/request-card-details" hx-trigger="click" hx-target="#request-card-details" hx-swap="outerHTML" class="icon-btn flex w-full justify-center gap-3 rounded bg-yellow-300 px-4 py-2 hover:bg-yellow-400 active:bg-yellow-500 sm:w-fit">
             <svg class="hx-indicator relative animate-spin lg:top-1" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"/></svg>
             <svg class="original-icon transform lg:translate-y-1" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"> <path d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z" /> </svg>
             <span class="hidden lg:inline">
                 Detalhes
             </span>
         </button>
-        {{ if $is_downloadable }}
+        {{ if $ReqCardData.IsDownloadable }}
         <button
             class="flex w-full justify-center gap-3 rounded bg-gray-600 px-4 py-2 text-white hover:bg-gray-700 active:bg-gray-800 sm:w-fit">
             <svg class="transform lg:translate-y-1" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 640 512"
@@ -78,7 +40,7 @@
             </span>
         </button>
         {{ end }}
-        <button hx-get="/{{ $get_form_endpoint }}/{{ .Id }}/form" hx-target="{{ $target_form }}" hx-swap="outerHTML" hx-trigger="click" class="icon-btn flex w-full justify-center gap-3 whitespace-nowrap rounded bg-sky-300 px-4 py-2 hover:bg-sky-400 active:bg-sky-500 sm:w-fit">
+        <button hx-get="/{{ $ReqCardData.ResourceName }}/{{ .Id }}/form" hx-target="{{ $ReqCardData.TargetForm }}" hx-swap="outerHTML" hx-trigger="click" class="icon-btn flex w-full justify-center gap-3 whitespace-nowrap rounded bg-sky-300 px-4 py-2 hover:bg-sky-400 active:bg-sky-500 sm:w-fit">
             <svg class="hx-indicator relative animate-spin lg:top-1" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"/></svg>
             <svg class="original-icon transform lg:translate-y-1" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"> <path d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384V285.7l-86.8 86.8c-10.3 10.3-17.5 23.1-21 37.2l-18.7 74.9c-2.3 9.2-1.8 18.8 1.3 27.5H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zM549.8 235.7l14.4 14.4c15.6 15.6 15.6 40.9 0 56.6l-29.4 29.4-71-71 29.4-29.4c15.6-15.6 40.9-15.6 56.6 0zM311.9 417L441.1 287.8l71 71L382.9 487.9c-4.1 4.1-9.2 7-14.9 8.4l-60.1 15c-5.5 1.4-11.2-.2-15.2-4.2s-5.6-9.7-4.2-15.2l15-60.1c1.4-5.6 4.3-10.8 8.4-14.9z" /> </svg>
             <span class="hidden lg:inline">
