--- a/web/internal/views/partials/request-card.html
+++ b/web/internal/views/partials/request-card.html
@@ -7,7 +7,7 @@
     class="flex flex-wrap items-center justify-between gap-6 rounded px-4 py-4 shadow shadow-gray-300 transition-all hover:shadow-gray-500 sm:flex-nowrap sm:py-2">
     <div class="flex gap-3">
         <div {{ if $ReqCardData.ShouldCheckStatus }} hx-get="/{{ $ReqCardData.ResourceName }}/{{ .Id }}/request-card-status" hx-target="this" hx-swap="innerHTML" hx-trigger="every 5s" {{ end }}>
-            {{ template "partials/request-card-status" .ReqStatus }}
+            {{ template "partials/request-card-status" $ReqCardData.ReqStatus }}
         </div>
         <span>{{ $ReqCardData.From }}</span>
         <svg class="translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
@@ -17,7 +17,7 @@
         <span>{{ $ReqCardData.To }}</span>
     </div>
     <p class="flex-1 truncate text-{{ $ReqCardData.FeedbackTextColor }}-600">
-        {{ GetReqCardErrSummary .ReqMsg }}
+        {{ GetReqCardErrSummary $ReqCardData.ReqMsg }}
     </p>
     <div class="flex flex-1 justify-end gap-3 sm:flex-none">
         <button hx-get="/{{ $ReqCardData.ResourceName }}/{{ .Id }}/request-card-details" hx-trigger="click" hx-target="#request-card-details" hx-swap="outerHTML" class="icon-btn flex w-full justify-center gap-3 rounded bg-yellow-300 px-4 py-2 hover:bg-yellow-400 active:bg-yellow-500 sm:w-fit">
