fix: wrong colors in error/success req card details

--- a/web/internal/views/partials/request-card-details.html
+++ b/web/internal/views/partials/request-card-details.html
@@ -22,7 +22,7 @@
             </button>
         </header>
         <hr>
-        <pre class="py-4 text-sky-600 text-{{ $ReqCardData.FeedbackTextColor }}-600 whitespace-pre-wrap">
+        <pre class="py-4 text-{{ $ReqCardData.FeedbackTextColor }}-600 whitespace-pre-wrap">
             {{- $ReqCardData.ReqMsg -}}
         </pre>
         <hr>
