feat: use ncm field in invoice_items

--- a/web/internal/views/partials/invoice-form-item-section.html
+++ b/web/internal/views/partials/invoice-form-item-section.html
@@ -31,8 +31,8 @@
 
             <div class="w-1/7 flex flex-col gap-2 sm:pr-4">
                 <label for="ncm"><strong>NCM</strong></label>
-                <input class="rounded bg-gray-100 p-2" type="text" id="ncm" name="ncm" value="{{ .Description }}">
-                <sub class="text-red-600">{{ .Errors.Description }}</sub>
+                <input class="rounded bg-gray-100 p-2" type="text" id="ncm" name="ncm" value="{{ .NCM }}">
+                <sub class="text-red-600">{{ .Errors.NCM }}</sub>
             </div>
 
             <div class="w-1/7 flex flex-col gap-2 pr-4">
