feat: duplicate item section

--- a/web/internal/views/partials/invoice-form-item-section.html
+++ b/web/internal/views/partials/invoice-form-item-section.html
@@ -7,7 +7,8 @@
         <h3 class="pt-2 text-xl font-bold">Produto 0</h3>
 
         <div class="flex items-center justify-end gap-2 pr-1 pt-2">
-            <button type="button" class="rounded p-2 shadow shadow-gray-400 hover:bg-gray-100 active:bg-gray-200">
+            <button class="rounded p-2 shadow shadow-gray-400 hover:bg-gray-100 active:bg-gray-200" type="button"
+                onclick="duplicateItemSection(this.closest('section'))">
                 <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><path d="M288 448H64V224h64V160H64c-35.3 0-64 28.7-64 64V448c0 35.3 28.7 64 64 64H288c35.3 0 64-28.7 64-64V384H288v64zm-64-96H448c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H224c-35.3 0-64 28.7-64 64V288c0 35.3 28.7 64 64 64z"/></svg>
             </button>
             <button class="rounded p-2 shadow shadow-gray-400 hover:bg-gray-100 active:bg-gray-200" type="button"
