feat: filter requests by date in invoices page

--- a/web/internal/views/invoices-cancel.html
+++ b/web/internal/views/invoices-cancel.html
@@ -4,6 +4,6 @@
     {{ template "partials/invoice-cancel-form" . }}
 </section>
 
-<section class="pt-6">
+<section class="pt-6" id="requests-overview-section">
     {{ template "partials/requests-overview" .InvoiceCancelings }}
 </section>
