--- a/web/internal/views/invoices-print.html
+++ b/web/internal/views/invoices-print.html
@@ -2,6 +2,6 @@
     {{ template "partials/invoice-print-form" . }}
 </section>
 
-<section class="pt-6">
+<section class="pt-6" id="requests-overview-section">
     {{ template "partials/requests-overview" .InvoicePrintings }}
 </section>
