--- a/web/internal/views/invoices.html
+++ b/web/internal/views/invoices.html
@@ -2,6 +2,13 @@
     {{ template "partials/invoice-form" . }}
 </section>
 
-<section class="pt-6">
+<section class="pt-6" id="requests-overview-section">
+
+    <div class="flex flex-col justify-between md:flex-row">
+        <h3 class="text-xl font-semibold">Requerimentos</h3>
+
+        {{ template "partials/request-card-filters-form" . }}
+    </div>
+
     {{ template "partials/requests-overview" .Invoices }}
 </section>
