--- a/web/internal/views/partials/requests-overview.html
+++ b/web/internal/views/partials/requests-overview.html
@@ -1,11 +1,18 @@
 {{ define "partials/requests-overview" }}
-<h3 class="text-xl font-semibold">Requerimentos</h3>
-<div class="py-6">
+<div id="requests-overview-wrapper" class="py-6">
     <ul id="requests-overview" class="flex flex-col gap-4">
-        {{ if . }}
-            {{ range . }}
-                {{ template "partials/request-card" . }}
+        {{ $PrevDate := "" }}
+        {{ range . }}
+            {{ $CurrentDate := FormatDate .CreatedAt }}
+
+            {{ if ne $CurrentDate $PrevDate }}
+                {{ $PrevDate = $CurrentDate }}
+                <strong>{{ FormatDateAsBR .CreatedAt }}</strong>
             {{ end }}
+
+            {{ template "partials/request-card" . }}
+        {{ else }}
+            <h2>Nenhum requerimento nesta data :(</h2>
         {{ end }}
     </ul>
     {{ template "partials/request-card-details" }}
