--- a/web/internal/views/invoices-print.html
+++ b/web/internal/views/invoices-print.html
@@ -3,9 +3,11 @@
 </section>
 
 <section class="pt-6" id="requests-overview-section">
+
     <div class="flex flex-col justify-between md:flex-row">
         <h3 class="text-xl font-semibold">Requerimentos</h3>
 
+        {{ template "partials/request-card-filters-form" . }}
     </div>
 
     {{ template "partials/requests-overview" .InvoicePrintings }}
