feat: apply invoice cancelings filters (+ minor fixes)

--- a/web/internal/views/partials/requests-overview.html
+++ b/web/internal/views/partials/requests-overview.html
@@ -12,7 +12,7 @@
 
             {{ template "partials/request-card" . }}
         {{ else }}
-            <h2>Nenhum requerimento nesta data :(</h2>
+            <h2 class="text-lg">Nenhum requerimento neste período :(</h2>
         {{ end }}
     </ul>
     {{ template "partials/request-card-details" }}
