--- a/web/internal/views/invoices-cancel.html
+++ b/web/internal/views/invoices-cancel.html
@@ -8,6 +8,7 @@
     <div class="flex flex-col justify-between md:flex-row">
         <h3 class="text-xl font-semibold">Requerimentos</h3>
 
+        {{ template "partials/request-card-filters-form" . }}
     </div>
 
     {{ template "partials/requests-overview" .InvoiceCancelings }}
