--- a/web/views/layouts/base.html
+++ b/web/views/layouts/base.html
@@ -11,8 +11,10 @@
 
     <link rel="icon" href="/static/icons/icon.ico" type="image/x-icon">
 
-    <script src="https://unpkg.com/htmx.org@1.9.5/dist/htmx.min.js"></script>
+    <script src="https://unpkg.com/htmx.org/dist/htmx.min.js"></script>
+
     <script src="https://kit.fontawesome.com/58dd7cad0f.js" crossorigin="anonymous"></script>
+
     <script src="/static/scripts/index.js"></script>
 
     <title>NFF</title>
