refact: put form templates inside forms dir

--- a/web/views/entities.html
+++ b/web/views/entities.html
@@ -15,6 +15,6 @@
         </table>
     </section>
     <aside class="xl:w-2/5">
-        {{ template "partials/entity-form" . }}
+        {{ template "partials/forms/entity-form" . }}
     </aside>
 </div>
