--- a/web/views/login.html
+++ b/web/views/login.html
@@ -1,4 +1,4 @@
 <section class="flex justify-center md:pt-32">
-    {{ template "partials/login-form" . }}
+    {{ template "partials/forms/login-form" . }}
 </section>
 
