--- a/web/views/partials/forms/entity-form.html
+++ b/web/views/partials/forms/entity-form.html
@@ -1,4 +1,4 @@
-{{ define "partials/entity-form" }}
+{{ define "partials/forms/entity-form" }}
 <div class="sticky top-20" id="entity-form">
     <form>
         <input type="hidden" name="id" value="{{ .Entity.ID }}">
