feat: simple accordion for metrics results
- plus the magic of * { min-width: 0 }

--- a/web/static/styles/custom.css
+++ b/web/static/styles/custom.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+   min-width: 0;
+}
+
 .hx-indicator {
     display: none;
     transition: all 500ms ease-in;
